[package]
name = "directory-packages-props-converter"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.10.0"
shellexpand = "3.0.0"
thiserror = "1.0.38"
structopt = "0.3.26"
tokio = { version = "1.25.0", features = ["full"] }
regex = "1.7.1"
roxmltree = "0.18.0"
semver = "1.0.16"