[package]
name = "directory-packages-props-converter"
version = "0.3.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.27"
env_logger = "0.11.8"
shellexpand = "3.1.1"
thiserror = "2.0.12"
structopt = "0.3.26"
tokio = { version = "1.45.1", features = ["full"] }
regex = "1.11.1"
roxmltree = "0.20.0"
semver = "1.0.26"
ctor = "0.4.2"
case_insensitive_hashmap = "1.0.1"